--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/video/video-js.min.css}">
     <script th:src="@{/video/video.min.js}"></script>
     <script th:src="@{/video/zh-CN.js}"></script>
-    <title>云舒NAS</title>
+    <title th:text="${file+' 云舒NAS'}"></title>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
