--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -36,7 +36,7 @@
                 console.log(data);
                 h.innerHTML += data + "<br>";
                 if (data === 'OK') {
-                    h.innerHTML += "<a href='javascript:window.location.reload()'>立即观看</a>"
+                    h.innerHTML += "<a href='javascript:window.location.reload()'>立即观看</a><br/>"
                 }
             };
 
