--- a/src/main/resources/templates/progress.html
+++ b/src/main/resources/templates/progress.html
@@ -55,12 +55,12 @@
 
     //连接发生错误的回调方法
     websocket.onerror = function () {
-        setMessageInnerHTML("error link to log server");
+        setMessageInnerHTML("error link to server");
     };
 
     //连接成功建立的回调方法
     websocket.onopen = function (event) {
-        setMessageInnerHTML("success link to log server");
+        setMessageInnerHTML("success link to server");
     };
 
     //接收到消息的回调方法
@@ -70,7 +70,7 @@
 
     //连接关闭的回调方法
     websocket.onclose = function () {
-        setMessageInnerHTML("log server link is closed");
+        setMessageInnerHTML("server link is closed");
     };
 
     //监听窗口关闭事件，当窗口关闭时，主动去关闭websocket连接，防止连接还没断开就关闭窗口，server端会抛异常。
