--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -22,6 +22,18 @@
     </div>
     <ul class="mdui-list mdui-card-content" mdui-collapse="{accordion: true}">
         <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">domain</i>
+            <a th:href="@{/}" class="mdui-list-item-content">主页</a>
+        </li>
+        <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">video_library</i>
+            <a th:href="@{/}" class="mdui-list-item-content">视频队列</a>
+        </li>
+        <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">file_download</i>
+            <a th:href="@{/}" class="mdui-list-item-content">下载队列</a>
+        </li>
+        <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">vpn_key</i>
             <a th:href="@{/logout}" class="mdui-list-item-content">注销登陆</a>
         </li>
