--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,11 +11,28 @@
     <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        .links a {
+            color: rgba(0, 0, 0, .87);
+            text-decoration: none;
+        }
+
+        .links a:visited {
+            color: rgba(0, 0, 0, .87);
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body class="mdui-drawer-body-left mdui-appbar-with-toolbar mdui-theme-primary-indigo mdui-theme-accent-pink">
 <header th:replace="common :: header"></header>
 <nav th:replace="common :: nav"></nav>
 <section class="mdui-container">
+    <div class="mdui-card" style="margin-bottom: 8px;">
+        <div class="mdui-card-content links">
+            <span th:each="link:${links}"><a th:href="${'/?location='+link.link}"
+                                             th:text="${link.name}"></a><span> \ </span></span>
+        </div>
+    </div>
     <div class="mdui-table-fluid">
         <table class="mdui-table mdui-table-hoverable">
             <thead>
@@ -46,7 +63,7 @@
     function go(location) {
         if (location.dataset.dir === 'true') {
             window.location.href = "/?location=" + encodeURIComponent(location.dataset.location)
-        }else {
+        } else {
             window.location.href = "/video?location=" + encodeURIComponent(location.dataset.location)
         }
     }
