--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,11 @@
             color: rgba(0, 0, 0, .87);
             text-decoration: none;
         }
+
+        .links a:hover {
+            color: #FF4081;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body class="mdui-drawer-body-left mdui-appbar-with-toolbar mdui-theme-primary-indigo mdui-theme-accent-pink">
@@ -30,7 +35,7 @@
     <div class="mdui-card" style="margin-bottom: 8px;">
         <div class="mdui-card-content links">
             <span th:each="link:${links}"><a th:href="${'/?location='+link.link}"
-                                             th:text="${link.name}"></a><span> \ </span></span>
+                                             th:text="${link.name}"></a><span>&#92;</span></span>
         </div>
     </div>
     <div class="mdui-table-fluid">
