--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 <header th:replace="common :: header"></header>
 <nav th:replace="common :: nav"></nav>
 <section class="mdui-container">
-    <div class="mdui-card" style="margin-bottom: 8px;">
+    <div th:unless="${#lists.isEmpty(links)}" class="mdui-card" style="margin-bottom: 8px;">
         <div class="mdui-card-content links">
             <span th:each="link:${links}"><a th:href="${'/?location='+link.link}"
                                              th:text="${link.name}"></a><span>&#92;</span></span>
