add video queue

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -27,11 +27,11 @@
         </li>
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">video_library</i>
-            <a th:href="@{/}" class="mdui-list-item-content">视频队列</a>
+            <a th:href="@{/video_queue}" class="mdui-list-item-content">视频队列</a>
         </li>
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">file_download</i>
-            <a th:href="@{/}" class="mdui-list-item-content">下载队列</a>
+            <a th:href="@{/down_queue}" class="mdui-list-item-content">下载队列</a>
         </li>
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">vpn_key</i>
