--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -34,6 +34,10 @@
             <a th:href="@{/down_queue}" class="mdui-list-item-content">下载队列</a>
         </li>
         <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">poll</i>
+            <a th:href="@{/log}" class="mdui-list-item-content">实时日志</a>
+        </li>
+        <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">vpn_key</i>
             <a th:href="@{/logout}" class="mdui-list-item-content">注销登陆</a>
         </li>
