--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -20,6 +20,12 @@
 <header th:replace="common :: header"></header>
 <nav th:replace="common :: nav"></nav>
 <section class="mdui-container">
+    <div th:unless="${#lists.isEmpty(links)}" class="mdui-card" style="margin-bottom: 8px;">
+        <div class="mdui-card-content links">
+            <span th:each="link:${links}"><a th:href="${'/?location='+link.link}"
+                                             th:text="${link.name}"></a><span>&#92;</span></span>
+        </div>
+    </div>
     <video id="video-id" class="video-js vjs-default-skin vjs-big-play-centered vjs-fluid" controls preload="auto">
         <source th:src="${'/hls/'+name+'.m3u8'}" type="application/x-mpegURL">
     </video>
