--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
                 th:data-canplay="${file.canPlay}"
                 th:data-location="${file.location}">
                 <td><i th:if="${file.isFile()&&!file.canPlay}" class="mdui-icon material-icons">insert_drive_file</i>
-                    <i th:if="${file.isFile()&&file.canPlay}" class="mdui-icon material-icons">music_video</i>
+                    <i th:if="${file.isFile()&&file.canPlay}" class="mdui-icon material-icons">videocam</i>
                     <i th:if="${!file.isFile() }" class="mdui-icon material-icons">folder</i>
                     <span th:if="${file.name==''}" th:text="${file.location}"></span>
                     <span th:if="${file.name!=''}" th:text="${file.name}"></span>
