feat: 歌曲管理后台

--- a/nas-video/src/main/resources/templates/common.html
+++ b/nas-video/src/main/resources/templates/common.html
@@ -38,6 +38,14 @@
             <a th:href="@{/log}" class="mdui-list-item-content">实时日志</a>
         </li>
         <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">queue_music</i>
+            <a th:href="@{/musicManage/musicList}" class="mdui-list-item-content">音乐列表</a>
+        </li>
+        <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">file_upload</i>
+            <a th:href="@{/musicManage/musicUpload}" class="mdui-list-item-content">上传音乐</a>
+        </li>
+        <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">vpn_key</i>
             <a th:href="@{/logout}" class="mdui-list-item-content">注销登陆</a>
         </li>
