feat: 下载与日志

--- a/nas-front-end/src/app/module/index/component/index/index.component.html
+++ b/nas-front-end/src/app/module/index/component/index/index.component.html
@@ -16,6 +16,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/video/list">列表</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/download">下载</a>
+          </li>
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="音乐" nzIcon="customer-service">
@@ -25,6 +28,13 @@
           </li>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/music/add">添加</a>
+          </li>
+        </ul>
+      </li>
+      <li nz-submenu nzOpen nzTitle="系统" nzIcon="code">
+        <ul>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/log">日志</a>
           </li>
         </ul>
       </li>
