feat: change logo href

--- a/nas-front-end/src/app/module/index/component/index/index.component.html
+++ b/nas-front-end/src/app/module/index/component/index/index.component.html
@@ -5,7 +5,7 @@
             [(nzCollapsed)]="isCollapsed"
             [nzTrigger]="null">
     <div class="sidebar-logo">
-      <a href="https://github.com/itning/generic-service-client" target="_blank">
+      <a routerLink="/" target="_blank">
         <img src="assets/logo.jpg" alt="logo">
         <h1>云舒NAS</h1>
       </a>
