feat: setting page

--- a/nas-front-end/src/app/module/index/component/index/index.component.html
+++ b/nas-front-end/src/app/module/index/component/index/index.component.html
@@ -36,6 +36,9 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/log">日志</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="/setting">设置</a>
+          </li>
         </ul>
       </li>
     </ul>
