--- a/nas-front-end/src/app/module/index/component/setting/setting.component.html
+++ b/nas-front-end/src/app/module/index/component/setting/setting.component.html
@@ -37,9 +37,13 @@
         </nz-form-item>
         <nz-form-item nz-row>
           <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button style="margin-right: 6px" nz-button nzType="default" (click)="testDbConfig()"
+                    [disabled]="!dbConfigFromGroup.valid" [nzLoading]="buttonLoading.testDbConfig">测试数据库连接
+            </button>
             <button nz-button nzType="primary" nz-popconfirm
                     nzPopconfirmTitle="确定保存？"
-                    (nzOnConfirm)="submitDbConfigForm()">保存数据库配置
+                    (nzOnConfirm)="submitDbConfigForm()" [disabled]="!dbConfigFromGroup.valid"
+                    [nzLoading]="buttonLoading.submitDbConfigForm">保存数据库配置
             </button>
           </nz-form-control>
         </nz-form-item>
@@ -76,7 +80,8 @@
         <nz-form-item>
           <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="basicAuth.enable">基础认证配置</nz-form-label>
           <nz-form-control [nzSm]="14" [nzXs]="24">
-            <label nz-checkbox [(ngModel)]="enableBasicAuth" [ngModelOptions]="{standalone: true}"
+            <label nz-checkbox [(ngModel)]="enableBasicAuth" (nzCheckedChange)="basicAuthEnableChange()"
+                   [ngModelOptions]="{standalone: true}"
                    id="basicAuth.enable">开启基础认证</label>
           </nz-form-control>
         </nz-form-item>
@@ -103,7 +108,8 @@
           <nz-form-control [nzSpan]="14" [nzOffset]="6">
             <button nz-button nzType="primary" nz-popconfirm
                     nzPopconfirmTitle="确定保存？"
-                    (nzOnConfirm)="submitNasConfigForm()">保存应用配置
+                    (nzOnConfirm)="submitNasConfigForm()" [disabled]="!nasConfigFromGroup.valid"
+                    [nzLoading]="buttonLoading.submitNasConfigForm">保存应用配置
             </button>
           </nz-form-control>
         </nz-form-item>
@@ -129,7 +135,8 @@
           <nz-form-item>
             <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired [nzFor]="i+'className'">数据源类型</nz-form-label>
             <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="数据源类型必填">
-              <nz-select formControlName="className" [id]="i+'className'" nzPlaceHolder="请选择数据源类型">
+              <nz-select formControlName="className" [id]="i+'className'" (ngModelChange)="dataSourceTypeChange(item)"
+                         nzPlaceHolder="请选择数据源类型">
                 <nz-option nzValue="top.itning.yunshunas.music.datasource.impl.FileDataSource"
                            nzLabel="文件系统"></nz-option>
                 <nz-option nzValue="top.itning.yunshunas.music.datasource.impl.TencentCosDataSource"
@@ -222,7 +229,107 @@
           <nz-form-control [nzSpan]="14" [nzOffset]="6">
             <button nz-button nzType="primary" nz-popconfirm
                     nzPopconfirmTitle="确定保存？"
-                    (nzOnConfirm)="submitDataSourceConfigForm()">保存数据源配置
+                    (nzOnConfirm)="submitDataSourceConfigForm()" [disabled]="!datasourceConfigFromGroup.valid"
+                    [nzLoading]="buttonLoading.submitDataSourceConfigForm">
+              保存数据源配置
+            </button>
+          </nz-form-control>
+        </nz-form-item>
+      </form>
+    </nz-card>
+  </div>
+  <div style="margin-top: 16px">
+    <ng-template #addFtp>
+      <button nz-button nzType="dashed" style="margin-right: 12px" (click)="addFtpConfigFromGroup()">
+        <span nz-icon nzType="plus"></span>
+        新增FTP服务
+      </button>
+    </ng-template>
+    <nz-card nzTitle="FTP服务器配置" [nzExtra]="addFtp">
+      <form nz-form [formGroup]="ftpConfigFromGroup">
+        <div *ngFor="let item of ftpConfigFromGroupArray.controls;let i=index" [formGroup]="getGroup(item)">
+          <nz-form-item>
+            <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="i+'name_ftp'" nzRequired>FTP服务名称</nz-form-label>
+            <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="FTP服务名称必填">
+              <input nz-input formControlName="name" [id]="i+'name_ftp'"/>
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+            <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired [nzFor]="i+'port'">端口</nz-form-label>
+            <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="端口必填">
+              <nz-input-number formControlName="port" [id]="i+'port'" [nzMin]="0" [nzMax]="65535"
+                               [nzStep]="1"></nz-input-number>
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+            <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="i+'serverAddress'">服务地址</nz-form-label>
+            <nz-form-control [nzSm]="14" [nzXs]="24">
+              <input nz-input placeholder="0.0.0.0" formControlName="serverAddress" [id]="i+'serverAddress'"/>
+            </nz-form-control>
+          </nz-form-item>
+          <div *ngFor="let itemUser of getFromArray(item.get('users')).controls;let ii=index"
+               [formGroup]="getGroup(itemUser)">
+            <nz-form-item>
+              <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="ii+'enableAnonymousAccess'">
+                用户{{ii}}开启匿名访问
+              </nz-form-label>
+              <nz-form-control [nzSm]="14" [nzXs]="24">
+                <label nz-checkbox formControlName="enableAnonymousAccess"
+                       (nzCheckedChange)="enableAnonymousAccessChange(itemUser)"
+                       id="enableAnonymousAccess">开启匿名访问</label>
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item *ngIf="!itemUser.get('enableAnonymousAccess').value">
+              <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="ii+'ftp_username'" nzRequired>用户{{ii}}用户名
+              </nz-form-label>
+              <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="用户名必填">
+                <input nz-input formControlName="username" [id]="ii+'ftp_username'"/>
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item *ngIf="!itemUser.get('enableAnonymousAccess').value">
+              <nz-form-label [nzSm]="6" [nzXs]="24" [nzFor]="ii+'ftp_password'" nzRequired>用户{{ii}}密码
+              </nz-form-label>
+              <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="密码必填">
+                <input nz-input formControlName="password" [id]="ii+'ftp_password'"/>
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+              <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired [nzFor]="ii+'homeDir'">用户{{ii}}主目录</nz-form-label>
+              <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="主目录必填">
+                <input nz-input formControlName="homeDir" [id]="ii+'homeDir'"/>
+              </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nz-row>
+              <nz-form-control [nzSpan]="14" [nzOffset]="6">
+                <button nz-button nzType="default" nzDanger nz-popconfirm
+                        nzPopconfirmTitle="确定移除？"
+                        (nzOnConfirm)="removeFtpUserConfigFromGroup(item.get('users'),ii)"
+                        [disabled]="getFromArray(item.get('users')).controls.length===1">
+                  移除用户 {{ii}}
+                </button>
+              </nz-form-control>
+            </nz-form-item>
+          </div>
+          <nz-form-item nz-row>
+            <nz-form-control [nzSpan]="14" [nzOffset]="6">
+              <button style="margin-right: 6px" nz-button nzType="default"
+                      (click)="addFtpUserConfigFromGroup(item.get('users'))">新增用户
+              </button>
+              <button nz-button nzType="default" nzDanger nz-popconfirm
+                      nzPopconfirmTitle="确定移除？"
+                      (nzOnConfirm)="removeFtpConfigFromGroup(i)">移除FTP服务
+              </button>
+            </nz-form-control>
+          </nz-form-item>
+          <nz-divider></nz-divider>
+        </div>
+        <nz-form-item *ngIf="ftpConfigFromGroupArray.controls.length>0">
+          <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary" nz-popconfirm
+                    nzPopconfirmTitle="确定保存？"
+                    (nzOnConfirm)="submitFtpConfigForm()" [disabled]="!ftpConfigFromGroup.valid"
+                    [nzLoading]="buttonLoading.submitFtpConfigForm">
+              保存FTP服务配置
             </button>
           </nz-form-control>
         </nz-form-item>
