--- a/nas-front-end/src/app/module/music/component/add/add.component.html
+++ b/nas-front-end/src/app/module/music/component/add/add.component.html
@@ -48,7 +48,7 @@
     </nz-form-item>
     <nz-form-item nz-row>
       <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <button nz-button nzType="primary" [disabled]="!musicUri" nz-popconfirm
+        <button [nzLoading]="addLoading" nz-button nzType="primary" [disabled]="!musicUri" nz-popconfirm
                 nzPopconfirmTitle="确定新增？"
                 (nzOnConfirm)="submitForm()">新增
         </button>
